# nomad-simulation-entries

./: .gitignore  METADATA.md  README.md  RUN.md  pyproject.toml
data/: code_author_dataset_overview.csv  code_author_overview.csv  code_overview.csv  global_author_dataset_overview.csv  query_index.json  run_metadata.json
entries/by_code/: FHI-aims.jsonl  FHI-aims_combined_metadata.json  FHI-aims_run_metadata.json  GROMACS.jsonl  GROMACS_run_metadata.json  ORCA.jsonl  ORCA_run_metadata.json  QuantumEspresso.jsonl  VASP.jsonl  VASP.massgathered.jsonl  atomisticparsers_h5md_parser_entry_point.jsonl  atomisticparsers_h5md_parser_entry_point_run_metadata.json  exciting.jsonl
scripts/: __init__.py  collect_entries.py  create_run_metadata.py  migrate_metadata.py  nomad_api.py  schemas.py  selection.py
tests/: test_selection.py
