[project]
name = "nomad-simulation-entries"
version = "0.1.0"
description = "Collector for representative NOMAD entry IDs using metadata-only queries."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.6",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts"]
